--- a/CSharp_Call_CPPDLL/CSharp_Call_CPPDLL.csproj
+++ b/CSharp_Call_CPPDLL/CSharp_Call_CPPDLL.csproj
@@ -10,4 +10,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CLRDLL\CLRDLL.vcxproj" />
+  </ItemGroup>
+
 </Project>
